# ja4

ja4-plugin/: CMakeLists.txt
ja4-plugin/scripts/: __load__.zeek
ja4-plugin/scripts/ja4/: main.zeek
ja4-plugin/src/: ja4.bif  ja4h.cc  ja4s.cc
zeek/ja4h/: main.zeek
